test_results/tools.txt
test
+- run test 541 pass, 1 skip, 3 fail, 4 crash (549 total)
error: 'tools.delegate.test.delegate executes gracefully without config' terminated with signal ABRT with stderr:
       Segmentation fault at address 0x10b1e0000
       ???:?:?: 0x187b85160 in __os_alloc_slow (/usr/lib/system/libsystem_platform.dylib)
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/root.zig:141:31: 0x1058f8673 in deinit (test)
                       allocator.free(e);
                                     ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/delegate.zig:169:24: 0x10592b22b in test.delegate executes gracefully without config (test)
           defer result.deinit(std.testing.allocator);
                              ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:147:68: 0x1053e72a7 in mainServer (test)
                       const status: TestResults.Status = if (test_fn.func()) |v| s: {
                                                                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:68:26: 0x1053e51b7 in main (test)
               return mainServer(init) catch @panic("internal test runner failure");
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/start.zig:678:88: 0x1053e4caf in callMain (test)
           if (fn_info.params[0].type.? == std.process.Init.Minimal) return wrapMain(root.main(.{
                                                                                              ^
       ???:?:?: 0x1877b1d53 in start (/usr/lib/dyld)
error: 'tools.delegate.test.delegate with valid params handles missing provider gracefully' terminated with signal ABRT with stderr:
       Segmentation fault at address 0x106300000
       ???:?:?: 0x187b85160 in __os_alloc_slow (/usr/lib/system/libsystem_platform.dylib)
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/root.zig:141:31: 0x101120673 in deinit (test)
                       allocator.free(e);
                                     ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/delegate.zig:225:24: 0x10115463b in test.delegate with valid params handles missing provider gracefully (test)
           defer result.deinit(std.testing.allocator);
                              ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:147:68: 0x100c0f2a7 in mainServer (test)
                       const status: TestResults.Status = if (test_fn.func()) |v| s: {
                                                                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:68:26: 0x100c0d1b7 in main (test)
               return mainServer(init) catch @panic("internal test runner failure");
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/start.zig:678:88: 0x100c0ccaf in callMain (test)
           if (fn_info.params[0].type.? == std.process.Init.Minimal) return wrapMain(root.main(.{
                                                                                              ^
       ???:?:?: 0x1877b1d53 in start (/usr/lib/dyld)
error: 'tools.delegate.test.delegate with context field handles missing provider gracefully' terminated with signal ABRT with stderr:
       Segmentation fault at address 0x1017a0000
       ???:?:?: 0x187b85160 in __os_alloc_slow (/usr/lib/system/libsystem_platform.dylib)
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/root.zig:141:31: 0x100e8c673 in deinit (test)
                       allocator.free(e);
                                     ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/delegate.zig:266:24: 0x100ec1107 in test.delegate with context field handles missing provider gracefully (test)
           defer result.deinit(std.testing.allocator);
                              ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:147:68: 0x10097b2a7 in mainServer (test)
                       const status: TestResults.Status = if (test_fn.func()) |v| s: {
                                                                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:68:26: 0x1009791b7 in main (test)
               return mainServer(init) catch @panic("internal test runner failure");
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/start.zig:678:88: 0x100978caf in callMain (test)
           if (fn_info.params[0].type.? == std.process.Init.Minimal) return wrapMain(root.main(.{
                                                                                              ^
       ???:?:?: 0x1877b1d53 in start (/usr/lib/dyld)
error: 'tools.delegate.test.delegate depth within limit proceeds' terminated with signal ABRT with stderr:
       Segmentation fault at address 0x104000000
       ???:?:?: 0x187b85160 in __os_alloc_slow (/usr/lib/system/libsystem_platform.dylib)
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/root.zig:141:31: 0x103738673 in deinit (test)
                       allocator.free(e);
                                     ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/delegate.zig:311:24: 0x10376db7b in test.delegate depth within limit proceeds (test)
           defer result.deinit(std.testing.allocator);
                              ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:147:68: 0x1032272a7 in mainServer (test)
                       const status: TestResults.Status = if (test_fn.func()) |v| s: {
                                                                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:68:26: 0x1032251b7 in main (test)
               return mainServer(init) catch @panic("internal test runner failure");
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/start.zig:678:88: 0x103224caf in callMain (test)
           if (fn_info.params[0].type.? == std.process.Init.Minimal) return wrapMain(root.main(.{
                                                                                              ^
       ???:?:?: 0x1877b1d53 in start (/usr/lib/dyld)
error: 'tools.http_request.test.execute rejects non-allowlisted domain' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x102ea1ed7 in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/http_request.zig:532:5: 0x1033b59c7 in test.execute rejects non-allowlisted domain (test)
           try std.testing.expect(std.mem.indexOf(u8, result.error_msg.?, "allowed_doma
error: 'tools.web_fetch.test.WebFetchTool localhost blocked' failed:
       ins") != null);
           ^
       
       ====== expected this output: =========
       Blocked local/private host␃
       
       ======== instead found this: =========
       Unable to verify host safety␃
       
       ======================================
       First difference occurs on line 1:
       expected:
       Blocked local/private host
       ^ ('\x42')
       found:
       Unable to verify host safety
       ^ ('\x55')
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:682:9: 0x102f3b2d7 in expectEqualStrings (test)
               return error.TestExpectedEqual;
               ^
       /Users/asil/.openclaw/workspace/nullclaw/src/tools/web_fetch.zig:460:5: 0x1033c0237 in test.WebFetchTool localhost blocked (test)
           try testing.expectEqualStrings("Blocked local/private host", result.error_msg.?);
           ^
error: 'agent.dispatcher.test.buildToolInstructions empty tools' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x102ea1ed7 in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/agent/dispatcher.zig:1477:5: 0x103469467 in test.buildToolInstructions empty tools (test)
           try std.testing.expect(std.mem.indexOf(u8, instructions, "tool_call") != null);
           ^
failed command: ./.zig-cache/o/b456f832cb8f03bf99e6b6c6a3f756c4/test --cache-dir=./.zig-cache --seed=0xaa44c2b8 --listen=-

Build Summary: 6/8 steps succeeded (1 failed); 541/549 tests passed (1 skipped, 3 failed, 4 crashed)
test transitive failure
+- run test 541 pass, 1 skip, 3 fail, 4 crash (549 total)
|  +- compile test Debug native success 14s MaxRSS:736M
|     +- WriteFile sqlite3.h cached
|     +- compile lib sqlite3 Debug native cached 80ms MaxRSS:30M
|     +- compile lib sqlite3 Debug native (reused)
|     +- options cached
+- run test success 217ms MaxRSS:2M
   +- compile test Debug native success 4s MaxRSS:250M
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- options (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/0105c9ee9be62dc964bdfac84a8967a7/build /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/zig /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib /Users/asil/.openclaw/workspace/nullclaw .zig-cache /Users/asil/.cache/zig --seed 0xaa44c2b8 -Z77f216c0163258d8 test -Dtest-file=tools --summary all
